# battered

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  deny.toml  justfile
.github/workflows/: ci.yml  codeberg-mirror.yml
docs/src/: battered.1.md  battered.5.md
examples/: battered.service  battery-notify.service  config.toml
src/: config.rs  main.rs  template.rs
