[package]
name = "battery-notify"
version = "0.3.5"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
shell-words = "1.1"
starship-battery = "0.10"
toml = "0.8"
