[package]
name = "battered"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Regularly polls battery levels and sends notifications on crossing certain thresholds."
repository = "https://github.com/t4k1t/battered"
readme = "README.md"
keywords = ["battery", "linux", "notification", "cli", "command"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
shell-words = "1.1"
starship-battery = "0.10"
toml = "0.8"
