[package]
name = "battered"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Make the most of your laptop's battery life with custom actions and informative desktop notifications."
authors = ["Thomas Kager <t4k1t+dev@protonmail.com>"]
repository = "https://github.com/t4k1t/battered"
readme = "README.md"
keywords = ["battery", "linux", "notification", "cli", "command"]
categories = ["command-line-utilities"]
exclude = [".github/*", "justfile", "assets/icon/battered-icon.inkscape.svg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
notify-rust = "4.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"
shell-words = "1.1"
starship-battery = "0.10"
toml = "0.8"
